syntax = "proto3";

package NAlice;

option go_package = "a.yandex-team.ru/alice/protos/data/location";
option java_package = "ru.yandex.alice.protos.data.location";
option java_outer_classname = "Room";

import "alice/protos/data/device/info.proto";

import "mapreduce/yt/interface/protos/extension.proto";

message TUserRoom {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string Id = 1 [json_name = "id", (NYT.column_name) = "id"];
    string Name = 2 [json_name = "name", (NYT.column_name) = "name"];
    string HouseholdId = 3 [json_name = "household_id", (NYT.column_name) = "household_id"];
    TUserSharingInfo SharingInfo = 4 [json_name = "sharing_info", (NYT.column_name) = "sharing_info"];
}
