syntax = "proto3";

package NAlice;

option go_package = "a.yandex-team.ru/alice/protos/data/video";
option java_package = "ru.yandex.alice.protos.data.video";
option java_outer_classname = "VideoContentDetails";

import "mapreduce/yt/interface/protos/extension.proto";

message TContentDetailsItem {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    // Provider Item ID может не быть, в случае отсутствия фильма на кинопоиске
    string ProviderItemId = 1 [json_name = "provider_item_id", (NYT.column_name) = "provider_item_id"];
    string MainTrailerId = 2 [json_name = "main_trailer_id", (NYT.column_name) = "main_trailer_id"];
    string ProviderName = 3 [json_name = "provider_name", (NYT.column_name) = "provider_name"];
    string ItemType = 4 [json_name = "item_type", (NYT.column_name) = "item_type"];
    oneof OneOfAgeLimit {
        option (NYT.variant_field_name) = "one_of_age_limit";
        uint32 AgeLimit = 5 [json_name = "age_limit", (NYT.column_name) = "age_limit"];
    }
    string SearchQuery = 6 [json_name = "search_query", (NYT.column_name) = "search_query"];
}
